--- a/index.ipynb
+++ b/index.ipynb
@@ -119,11 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = \n"
+    "ba_longitude = coordinates[1]\n"
    ]
   },
   {
