--- a/index.ipynb
+++ b/index.ipynb
@@ -453,9 +453,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(neighborhood_markers)) # 5\n",
     "print(neighborhood_markers[-1] == marker_five) # True"
@@ -470,11 +479,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nieghbothood_markers' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-57fef840a874>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrecoleta_marker\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnieghbothood_markers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'nieghbothood_markers' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "recoleta_marker = None"
+    "recoleta_marker = nieghbothood_markers[1]"
    ]
   },
   {
